# hackathon2-todoap

./: .gitignore  CLAUDE.md  README.md
.specify/memory/: constitution.md
phase-1/: IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
phase-1/src/: main.py
phase-1/src/cli/: commands.py  display.py
phase-1/src/models/: task.py
phase-1/src/services/: task_service.py
phase-1/src/utils/: validators.py
phase-1/tests/: performance_test.py
phase-1/tests/integration/: test_cli_commands.py
phase-1/tests/unit/: test_display.py  test_task.py  test_task_service.py  test_validators.py
phase-2/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
phase-2/alembic/: env.py
phase-2/alembic/versions/: 593393675e3b_create_users_and_tasks_tables.py  f87cb5757944_add_composite_index_on_user_id_and_.py
phase-2/docs/: final-status.md  implementation-summary.md  rate-limiting.md  security-review.md
phase-2/src/: config.py  database.py  main.py
phase-2/src/api/: auth.py  deps.py  tasks.py
phase-2/src/models/: __init__.py  task.py  user.py
phase-2/src/schemas/: task.py  user.py
phase-2/src/services/: auth_service.py  task_service.py
phase-2/tests/: conftest.py
phase-2/tests/unit/: test_auth_service.py  test_task_service.py
phase-3/: .gitignore  README.md
phase-3/frontend/: package-lock.json  package.json
phase-3/mcp-server/: .env.example  package-lock.json  package.json
specs/001-cli-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-api-persistence/: data-model.md  plan.md  (+4 more)
(+50 files in other folders)
